fixing layout issue (detected through selemium test)

--- a/themes/palmweb_2/style.css
+++ b/themes/palmweb_2/style.css
@@ -533,7 +533,7 @@ body.sidebars #footer {
 }
 
 .common_names_as_common_names, .footnote, p.description{
-	margin-left: 2em;
+	margin-left: 23px;
 }
 
 #wrapper #container .breadcrumb {
